<resources>
    <string name="app_name">Eatly</string>
    <string name="HomeIcon">Home</string>
    <string name="OrdersIcon">Orders</string>
    <string name="CartIcon">Cart</string>
    <string name="UserIcon">User</string>

    <string name="logoutBtn">Log out</string>
    <string name="ordersBtn">Your Orders</string>
    <string name="DetailsBtn">Edit Details</string>
    <string name="ChangePass">Change Password</string>
    <string name="passwordBtn">Change Password</string>
    <string name="addPhone">Add Phone Number</string>
    <string name="UserPageTitle">My account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--  Home page Strings  -->
    <string name="search">Search</string>
    <string name="Popular">Popular Products</string>
    <string name="GroceryKitchen">Grocery &amp; Kitchen</string>
    <string name="SnacksDrinks">Snacks &amp; Drinks</string>

    <!--  Edit Details  -->
    <string name="nameD">Name:</string>
    <string name="phoneD">Phone:</string>

    <!--  Edit Password  -->
    <string name="oldPass">Old:</string>
    <string name="newPass">New:</string>
    <string name="confirmPass">Confirm:</string>

    <!--  Cart  -->
    <string name="cart">Cart</string>

    <string name="SaveBtn">Save</string>
    <string name="AddBtn">Add</string>

    <string name="price">155</string>
    <string name="atc">Add to Cart</string>
    <string name="Fruits">Fruits</string>
    <string name="Products">Products</string>
    <string name="Bill">Bill Details</string>
    <string name="ItemsTotal">Items Total</string>
    <string name="HandlingCharge">Handling Charge</string>
    <string name="DeliveryCharge">Delivery Charge</string>
    <string name="GrandTotal">Grand Total</string>
    <string name="PlaceOrder">Place Order</string>
    <string name="noItemCart">No Items in Cart</string>
    <string name="dot">•</string>
    <string name="Ordered">Ordered</string>
    <string name="RepeatOrder">Repeat Order</string>
    <string name="Welcome">Welcome to Eatly\n</string>
    <string name="Signup">Signup</string>
    <string name="login">Login</string>

</resources>