<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="@color/slate200"
    android:padding="10dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/productImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_background_slate300"
            android:src="@drawable/placeholder" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/Popular"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveBtnD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/slate900"
            android:text="@string/atc"
            android:textSize="11sp"
            android:textColor="@color/slate300"
            android:padding="5dp"
            android:layout_marginHorizontal="10dp"
            app:cornerRadius="8dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>