<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/slate200"
        android:orientation="vertical"
        tools:context=".CartFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/cart"
            app:titleTextColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:text="@string/Products"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartItemRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <LinearLayout
                android:id="@+id/billDetailsL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/Bill"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_background_slate300"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="@string/ItemsTotal"
                        />

                    <TextView
                        android:id="@+id/cartItemsTotal"
                        android:layout_width="match_parent"
                        android:gravity="end"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:text="15"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="@string/HandlingCharge"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:text="₹5"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="@string/DeliveryCharge"
                        />

                    <TextView
                        android:id="@+id/deliveryCharge"
                        android:layout_width="match_parent"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:text="₹25"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/slate200" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/GrandTotal"
                        />

                    <TextView
                        android:id="@+id/grandTotal"
                        android:layout_width="match_parent"
                        android:gravity="end"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="25"
                        />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/placeOrderBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/slate900"
                android:text="@string/PlaceOrder"
                android:textSize="20sp"
                android:textColor="@color/slate300"
                android:layout_marginHorizontal="10dp"
                app:cornerRadius="8dp" />

        </LinearLayout>

            </LinearLayout>
    </LinearLayout>

</ScrollView>